API Programatica
Completely functional backend, tested with /docs API
